Chapter 1,2 updates