@@ -1,7 +1,7 @@
 # Practical-Design-Patterns-for-Java-Developers
 Practical Design Patterns for Java Developers, published by Packt
 
-#### how to compile a code
+### how to compile a code
 ```bash
 $ javac --release 17 --enable-preview -g -cp out -sourcepath java -d out ./<CHAPTER_NUMBER>/<CHAPTER_IDENTIFIER>/*.java
 
@@ -36,16 +36,122 @@ download links:
 $ java -XX:StartFlightRecording=filename=<PATTERN_NAME_MAIN>.jfr,dumponexit=true,settings=profile <MAIN_CLASS>
 ```
 
-## Chapter 1 -  initial examples
-The examples are 
-Runnable examples:
-- Example1_2Main
-- Example1_6Main
-- Example1_7Main
-- Example1_8Main
-- Example1_9Main
+## Chapter 1 -  getting into software design patterns examples
+ 1. **OOP** pilars **APIE** :
+    - encapuslation (E) : 
+        - [Example 1.1 - `Vehicle.java`](./Capther01/apie/Vehicle.java)
+    - inheritance   (I)
+        - [`Car.java` implementation extends `Vehicle` class](./Capther01/apie/Car.java)
+        - [`SportCar.java` class extends `AbstractVehicle` class](./Capther01/apie/Car.java)
+    - polymorphism  (P)
+        - method overloading
+            - [Figure 1.5 - `Vehicle` class](./Capther01/apie/Vehicle.java)
+        - method overriding
+            - [Example 1.2, Figure 1.6 - `Vehicle` class](./Capther01/apie/Vehicle.java)
+            - [Example 1.2, Figure 1.6 - `Car` class](./Capther01/apie/Car.java)
+    - abstraciton   (A)
+        - abstract `class`
+            - [Example 1.3, Figure 1.7 - `AbstractVehicle` class](./Capther01/apie/AbstractVehicle.java)
+            - [Example 1.3, Figure 1.7 - `CommonCar` class](./Capther01/apie/CommonCar.java)
+            - [Example 1.3, Figure 1.7 - `SportCar` class](./Capther01/apie/SportCar.java)
+        - interface `class`
+            - [Example 1.4, Figure 1.8 - `VehicleInterface` class](./Capther01/apie/VehicleInterface.java)
+            - [Example 1.4, Figure 1.8 - `Truck` class](./Capther01/apie/Truck.java)
+            - [Example 1.4, Figure 1.8 - `Bus` class](./Capther01/apie/Bus.java) 
+        - abstract and interface `classes`
+            - [Figure 1.9 - `VehicleInterface` class](./Capther01/apie/VehicleInterface.java)
+            - [Figure 1.9 - `AbstractVehicle` class](./Capther01/apie/AbstractVehicle.java)
+            - [Figure 1.9 - `Truck` class](./Capther01/apie/CommonCar.java)
+            - [Figure 1.9 - `Bus` class](./Capther01/apie/SportCar.java) 
 
-## Chapter 2 - java platform examples
+
+ 2. SOLID Principles
+    - single-responsiblity principle (SRP)
+        - [Figure 1.12 - `Vehicle` class](./Chapter01/solid/srp/Vehicle.java)
+        - [Figure 1.12 - `Engine` class](./Chapter01/solid/srp/Engine.java)
+        - [Figure 1.12 - `VehicleComputer` class](./Chapter01/solid/srp/VehicleComputer.java)
+    - open-closed principle (OCP)
+        - [Example 1.5 - `Vehicle` class](./Chapter01/solid/general/Vehicle.java)
+        - [Example 1.5 - `Truck` class](./Chapter01/solid/general/Truck.java)
+        - [Example 1.6 - `Example1_6Main` class](./Chapter01/solid/general/Example1_6Main.java)
+    - liskov substitution principle (LSP)
+        - [Example 1.7 - `Vehicle` class](./Chapter01/solid/general/Vehicle.java)
+        - [Example 1.7 - `CarWash` class](./Chapter01/solid/general/CarWash.java)
+        - [Example 1.7 - `Car` class](./Chapter01/solid/general/Car.java)
+        - [Example 1.7 - `SportCar` class](./Chapter01/solid/general/SportCar.java)
+        - [Example 1.7 - `Example1_7Main.java` class](./Chapter01/solid/general/Example1_7Main.java)
+    - interface segregation principle (ISP)
+        - malicious
+            - [Example 1.8 - `Vehicle` class](./Chapter01/solid/spi_malicious/Vehicle.java)
+            - [Example 1.8 - `Bike` class](./Chapter01/solid/spi_malicious/Bike.java)
+            - [Example 1.8 - `Car` class](./Chapter01/solid/spi_malicious/Car.java)
+            - [Example 1.8 - `Example1_8Main` class](./Chapter01/solid/spi_malicious/Example1_8Main.java)
+        - optimal
+            - [Example 1.9 - `Vehicle` class](./Chapter01/solid/spi_optimal/Vehicle.java)
+            - [Example 1.9 - `Bike` class](./Chapter01/solid/spi_optimal/Bike.java)
+            - [Example 1.9 - `Car` class](./Chapter01/solid/spi_optimal/Car.java)
+            - [Example 1.9 - `HasEngine` class](./Chapter01/solid/spi_optimal/HasEngine.java)
+            - [Example 1.9 - `HasPedals` class](./Chapter01/solid/spi_optimal/HasPedals.java)
+            - [Example 1.9 - `Example1_8Main` class](./Chapter01/solid/spi_optimal/Example1_9Main.java)
+    - dependency inversion principle (DIP)
+        - [Example 1.10 - `Gerage` class](./Chapter01/solid/dip/Garage.java)
+
+### Runnable Examples:
+```bash
+# Example 1.2:
+$ javac --release 17 --enable-preview -g -cp out/Chapter01/apie/ -sourcepath java -d out/Chapter01/apie ./Chapter01/apie/*.java
+$ java --enable-preview -cp out/Chapter01/apie Example1_2Main
+
+# Example 1.6 and Example 1.7
+$ javac --release 17 --enable-preview -g -cp out/Chapter01/solid/general/ -sourcepath java -d out/Chapter01/solid/general ./Chapter01/solid/general/*.java
+$ java --enable-preview -cp out/Chapter01/solid/general Example1_6Main
+$ java --enable-preview -cp out/Chapter01/solid/general Example1_7Main
+
+# Example 1.8: SPI - malicious
+$ javac --release 17 --enable-preview -g -cp out/Chapter01/solid/spi_malicious/ -sourcepath java -d out/Chapter01/solid/spi_malicious ./Chapter01/solid/spi_malicious/*.java
+$ java --enable-preview -cp out/Chapter01/solid/spi_malicious Example1_8Main
+
+# Example 1.9: SPI - optimal
+$ javac --release 17 --enable-preview -g -cp out/Chapter01/solid/spi_optimal/ -sourcepath java -d out/Chapter01/solid/spi_optimal ./Chapter01/solid/spi_optimal/*.java
+$ java --enable-preview -cp out/Chapter01/solid/spi_optimal Example1_9Main
+```
+## Chapter 2 - discovering the java platform for design patterns examples
+#### Runnable Examples
+```bash
+# Example 2.1:
+$ java ./Chapter02/Program.java
+
+# Example 2.12 and Example 2.13
+$ java ./Chapter02/StreamMain.java
+
+# Example 2.18: JPMS
+$ javac -d ./out/Chapter02/module-example ./Chapter02/module-example/module-info.java ./Chapter02/module-example/example/ExampleMain.java
+$ jar --create --file ./out/Chapter02/module-example.jar  -C ./out/Chapter02/module-example .
+$ java --module-path ./out/Chapter02/module-example.jar --module module.example/example.ExampleMain
+
+# Example 2.20: JEP-323
+$ java ./Chapter02/Jep323.java
+
+# Example 2.21: JEP-361
+$ java ./Chapter02/Jep361.java
+
+# Example 2.22: JEP-394
+$ java ./Chapter02/Jep394.java
+
+# Example 2.23: JEP-395
+$ java ./Chapter02/Jep395.java
+
+# Example 2.24: JEP-409
+$ javac --release 17 --enable-preview -g -cp ./out/Chapter02/jep409 -sourcepath java -d ./out/Chapter02/jep409 ./Chapter02/jep409/*.java
+$ java --enable-preview -cp out/Chapter02/jep409 Jep409Main
+
+# Example 2.27: JEP-420
+$ javac --release 17 --enable-preview -g -d ./out/Chapter02 ./Chapter02/Jep420.java
+$ java --enable-preview -cp ./out/Chapter02 Jep420
+
+# Example 2.28:
+$ java ./Chapter02/MultiThreadedProgram.java
+```
 
 ## Chapter 3 - creational patterns examples 
 ```bash
